[package]
name = "lesson-03"
version = "0.1.0"
edition = "2021"

[dependencies]
rand="0.9.0"

# `rand` crate is a library crate, which contains code that is intended to be used in other programs and can't be executed on its own
# in the [dependencies] section we tell Cargo which external crates our projects depend on